--- a/src/assets/scss/components/checks.css
+++ b/src/assets/scss/components/checks.css
@@ -1,6 +1,3 @@
-@import "@core/scss/vue/libs/vue-select.scss";
-@import "@core/scss/vue/libs/vue-flatpicker.scss";
-
 .flex {
   display: flex;
   flex-wrap: wrap;
@@ -287,25 +284,25 @@ h3 {
   font-style: normal;
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-device-width: 480px) {
   .container {
     max-width: 290px;
   }
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-device-width: 768px) {
   .container {
     max-width: 708px;
   }
 }
 
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-device-width: 1025px) {
   .container {
     max-width: 964px;
   }
 }
 
-@media only screen and (min-width: 1230px) {
+@media only screen and (min-device-width: 1230px) {
   .container {
     max-width: 1170px;
   }
@@ -315,33 +312,49 @@ h3 {
   text-align: end;
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-device-width: 1024px) {
   .col-4 {
-    -ms-flex: 0 0 33.33333%;
-    flex: 0 0 33.33333%;
+
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 33.33333%;
     max-width: 320px;
   }
 }
 
 @media only screen and(min-device-width: 768px) and (max-device-width: 1023px) {
   .col-4 {
-    -ms-flex: 0 0 33.33333%;
-    flex: 0 0 33.33333%;
+    display: flex;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 33.33333%;
     max-width: 50.33333%;
   }
 }
 
 @media only screen and(min-device-width: 620px) and (max-device-width: 767px) {
   .col-4 {
-    -ms-flex: 0 0 33.33333%;
-    flex: 0 0 33.33333%;
+    display: flex;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
+
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 33.33333%;
     max-width: 60.33333%;
   }
 }
 
 @media only screen and (min-device-width: 380px) and (max-device-width: 619px) {
   .col-4 {
-    -ms-flex: 0 0 33.33333%;
+    display: flex;
+    display: -moz-flex;
+    display: -webkit-flex;
+    display: -ms-flex;
+    display: flex;
     flex: 0 0 33.33333%;
     max-width: 100%;
   }
