--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -98,7 +98,7 @@
   .btn {
     max-width: 50px;
     // &:hover {
-    //   background-color: "primary";
+    //   background-color: "access";
     // }
   }
   .item-view-radio-group ::v-deep {
