--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -5,11 +5,12 @@
     max-width: 390px;
     align-items: center;
     padding: 3px;
+    min-width:270px;
   }
-  .pad {
-    bottom:110px !important;
-    left: 30px !important;
-  }
+  // .pad {
+  //   bottom:45% !important;
+  //   left: 30px !important;
+  // }
   .item-wrapper {
     display: flex;
     flex-direction: column;
@@ -56,8 +57,9 @@
   }
   .abs {
     position: absolute;
-    bottom: 95px;
-    left:10px;
+    top: 40%;
+    left:30px;
+    
   }
   .w-20 {
     width: 20%;
