--- a/src/@core/scss/base/ecommerce.scss
+++ b/src/@core/scss/base/ecommerce.scss
@@ -287,6 +287,7 @@
         .btn-wishlist {
           flex-grow: 1;
           border-radius: 0;
+          min-width: 214px;
         }
       }
 
