--- a/src/assets/scss/components/cardDetails.scss
+++ b/src/assets/scss/components/cardDetails.scss
@@ -64,6 +64,14 @@
     max-width: 390px;
     min-width: 350px;
   }
+
+   .min-w270 {
+    min-width: 270px !important;
+  }
+
+  .max-w {
+    max-width: 100%;
+  }
   // .card-body {
   //   border: 1px solid;
   //   border-radius: 4px;
