--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -6,8 +6,15 @@
     align-items: center;
     // padding: 3px;
     min-width:360px;
-    min-height: 330px;
+    min-height: 320px;
+    max-height: 330px;
     
+  }
+
+  .mh-300 {
+   // max-height: 320px !important;
+    height: 300px !important;
+    // min-height: 300px !important;
   }
 
  
