--- a/src/assets/scss/components/cardDetails.scss
+++ b/src/assets/scss/components/cardDetails.scss
@@ -72,6 +72,10 @@
   .max-w {
     max-width: 100%;
   }
+
+  .vs__dropdown-option--disabled {
+    display: none;
+}
   // .card-body {
   //   border: 1px solid;
   //   border-radius: 4px;
