--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -49,6 +49,18 @@
   margin-top: 1%;
 
 }
+
+.bg-c {
+  // background-color:rgba(0,0,0,.3) !important;
+  filter: brightness(180%);
+
+}
+
+.mar {
+  top:70px;
+  left: 180px;
+}
+
   .wrap {
     width: 90%;
     display: flex;
@@ -135,7 +147,8 @@ top:60px;
     max-width: 37% !important;
   }
   // .card-img-top {
-  //   min-height:200px !important;
+  //   background-color:rgba(0,0,0,.3);
+  //   z-index: 1000;
   // }
   .item-img {
     display: flex;
