fix badge in carddetails

--- a/src/assets/scss/components/cardDetails.scss
+++ b/src/assets/scss/components/cardDetails.scss
@@ -77,6 +77,22 @@
   top: 110px;
   left: 220px;
 }
+.xs-margin {
+  top: 11%;
+  left: 150px;
+}
+.md-margin {
+  top: 12%;
+  left: 220px;
+}
+.sm-margin {
+ top: 9rem;
+left: 15rem;
+}
+.lg-margin {
+  top: 8rem;
+  left: 15rem;
+}
 
 .pointer-events-none {
   pointer-events: none;
