--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -183,12 +183,12 @@ top:60px;
     width: 100%;
     height: 12px;
   }
-  .btn {
-    max-width: 50px;
-    // &:hover {
-    //   background-color: "access";
-    // }
-  }
+  // .btn {
+  //   max-width: 70px;
+  //   // &:hover {
+  //   //   background-color: "access";
+  //   // }
+  // }
   .item-view-radio-group ::v-deep {
     .btn {
       display: flex;
