--- a/src/@core/scss/base/ecommerce.scss
+++ b/src/@core/scss/base/ecommerce.scss
@@ -574,7 +574,7 @@
       position: fixed;
       opacity: 0;
       width: 100%;
-      height: 100%;
+      height: auto;
       top: 0;
       left: 0;
       right: 0;
