--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -7,13 +7,13 @@
     // padding: 3px;
     min-width:360px;
     min-height: 335px;
-    max-height: 340px;
+    //max-height: 340px;
     
   }
 
   .mh-300 {
-   max-height: 305px !important;
-    // height: 300px !important;
+  //  max-height: 305px !important;
+    height: fit-auto;
     min-height: 290px !important;
   }
 
@@ -137,7 +137,12 @@ top:60px;
      bottom:35%;
      left:30px;
 
-    
+  }
+
+  .mt-10 {
+    position: absolute;
+   top: 170px;
+   left:30px;
   }
   .w-20 {
     width: 20%;
