add accordion in cards

--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -80,10 +80,20 @@ left: 15rem;
     left:40px;
   }
 
-
   .min-w {
     min-width: 230px;
   }
+
+  .mh {
+min-height:10px !important;
+width: 100% !important;
+min-width: 100% !important;
+  }
+.collapse  {
+  
+  min-width: 100% !important;
+
+}
 
   .icon-margin {
     left:30px;
