--- a/src/assets/scss/components/cards.scss
+++ b/src/assets/scss/components/cards.scss
@@ -89,11 +89,11 @@ min-height:10px !important;
 width: 100% !important;
 min-width: 100% !important;
   }
-.collapse  {
+// .collapse  {
   
-  min-width: 100% !important;
+//   min-width: 100% !important;
 
-}
+// }
 
   .icon-margin {
     left:30px;
