--- a/public/bill.scss
+++ b/public/bill.scss
@@ -69,6 +69,7 @@ justify-content: space-between;
 {
   margin-top:90px;
   // width: 60%;
+  height: 800px;
   margin: 0 auto;
   font-size: 17px;
   background-color: white;
