--- a/src/assets/scss/components/cardDetails.scss
+++ b/src/assets/scss/components/cardDetails.scss
@@ -103,11 +103,15 @@ left: 15rem;
   pointer-events: none;
 }
    .min-w270 {
-    min-width: 270px !important;
+    min-width: 350px !important;
   }
 
   .max-w {
     max-width: 100%;
+  }
+
+  .max-h330 {
+    max-height: 330px;
   }
 
   .vs__dropdown-option--disabled {
