--- a/src/@core/scss/base/bootstrap-extended/_collapse.scss
+++ b/src/@core/scss/base/bootstrap-extended/_collapse.scss
@@ -6,6 +6,7 @@
   .collapse-title {
     font-weight: 500;
     font-size: 1.1rem;
+    margin-right: 1.3rem;
   }
   .card {
     margin-bottom: 0;
