--- a/src/@core/scss/vue/pages/page-auth.scss
+++ b/src/@core/scss/vue/pages/page-auth.scss
@@ -1,7 +1,7 @@
 @import '~@core/scss/base/pages/page-auth.scss';
 .brand-logo {
   svg {
-    height: 50px;
+    height: 70px; //50
     width: 200px;
   }
 }
