--- a/src/@core/scss/base/core/menu/_navigation.scss
+++ b/src/@core/scss/base/core/menu/_navigation.scss
@@ -82,7 +82,7 @@
       margin-top: 1.35rem;
       font-size: inherit;
       .brand-logo img {
-        max-width: 36px;
+        max-width: 56px; // было 36
       }
       .brand-text {
         color: $primary;
